separates notebooks, binomial and poisson dist

--- a/Statistics/Frequencies and measurements/data-types.ipynb
+++ b/Statistics/Frequencies and measurements/data-types.ipynb
@@ -10,162 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd0694c8744488563f6cd2d93f9dc805a9ad929a19bb6157c2d6f3cab25a4c31ca1",
-   "display_name": "Python 3.8.5 64-bit (conda)"
+   "name": "python394jvsc74a57bd05e40cfd5df456b01bbed649c63f8dd74ac56c11d2cc0539f847558a4b9a696a2",
+   "display_name": "Python 3.9.4 64-bit ('data-science-studies': conda)"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
-  {
-   "source": [
-    "# <font color=green>Knowing the data</font>\n",
-    "***"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## <font color=green>Project dataset</font>\n",
-    "***"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### National Household Sample Survey - 2015\n",
-    "\n",
-    "The <b> National Household Sample Survey - PNAD </b> annually investigates, on a permanent basis, general characteristics of the population, education, work, income and housing and others, with variable frequency, according to the information needs for the country, such as the characteristics of migration, fertility, nuptiality, health, food security, among other topics. The collection of these statistics constitutes, over the 49 years of conducting the research, an important instrument for the formulation, validation and evaluation of policies aimed at socioeconomic development and the improvement of living conditions in Brazil."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### Data source\n",
-    "\n",
-    "https://ww2.ibge.gov.br/home/estatistica/populacao/trabalhoerendimento/pnad2015/microdados.shtm"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### Used variables\n",
-    "\n",
-    "> ### Income\n",
-    "> ***\n",
-    "\n",
-    "Monthly income from the main job for persons aged 10 and over.\n",
-    "\n",
-    "> ### Age\n",
-    "> ***\n",
-    "\n",
-    "Resident's age on the reference date in years.\n",
-    "\n",
-    "> ### Height (own elaboration)\n",
-    "> ***\n",
-    "\n",
-    "Dweller height in meters.\n",
-    "\n",
-    "> ### UF\n",
-    "> ***\n",
-    "\n",
-    "|Code|Description|\n",
-    "|---|---|\n",
-    "|11|Rondônia|\n",
-    "|12|Acre|\n",
-    "|13|Amazonas|\n",
-    "|14|Roraima|\n",
-    "|15|Pará|\n",
-    "|16|Amapá|\n",
-    "|17|Tocantins|\n",
-    "|21|Maranhão|\n",
-    "|22|Piauí|\n",
-    "|23|Ceará|\n",
-    "|24|Rio Grande do Norte|\n",
-    "|25|Paraíba|\n",
-    "|26|Pernambuco|\n",
-    "|27|Alagoas|\n",
-    "|28|Sergipe|\n",
-    "|29|Bahia|\n",
-    "|31|Minas Gerais|\n",
-    "|32|Espírito Santo|\n",
-    "|33|Rio de Janeiro|\n",
-    "|35|São Paulo|\n",
-    "|41|Paraná|\n",
-    "|42|Santa Catarina|\n",
-    "|43|Rio Grande do Sul|\n",
-    "|50|Mato Grosso do Sul|\n",
-    "|51|Mato Grosso|\n",
-    "|52|Goiás|\n",
-    "|53|Distrito Federal|\n",
-    "\n",
-    "> ### Gender\t\n",
-    "> ***\n",
-    "\n",
-    "|Code|Description|\n",
-    "|---|---|\n",
-    "|0|Masculino|\n",
-    "|1|Feminino|\n",
-    "\n",
-    "> ### Years of studies\n",
-    "> ***\n",
-    "\n",
-    "|Code|Description|\n",
-    "|---|---|\n",
-    "|1|Sem instrução e menos de 1 ano|\n",
-    "|2|1 ano|\n",
-    "|3|2 anos|\n",
-    "|4|3 anos|\n",
-    "|5|4 anos|\n",
-    "|6|5 anos|\n",
-    "|7|6 anos|\n",
-    "|8|7 anos|\n",
-    "|9|8 anos|\n",
-    "|10|9 anos|\n",
-    "|11|10 anos|\n",
-    "|12|11 anos|\n",
-    "|13|12 anos|\n",
-    "|14|13 anos|\n",
-    "|15|14 anos|\n",
-    "|16|15 anos ou mais|\n",
-    "|17|Não determinados| \n",
-    "||Não aplicável|\n",
-    "\n",
-    "> ### Color\n",
-    "> ***\n",
-    "\n",
-    "|Code|Description|\n",
-    "|---|---|\n",
-    "|0|Indígena|\n",
-    "|2|Branca|\n",
-    "|4|Preta|\n",
-    "|6|Amarela|\n",
-    "|8|Parda|\n",
-    "|9|Sem declaração|"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "#### <font color = 'red'> Observation </font>\n",
-    "***\n",
-    "> The following treatments were performed on the original data:\n",
-    "> 1. Records where <b> Income </b> was invalid (999 999 999 999) were eliminated;\n",
-    "> 2. Records where <b> Income </b> was missing were eliminated;\n",
-    "> 3. Only the records of the <b> Reference Persons </b> of each household (responsible for the household) were considered."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
   {
    "source": [
     "Importing padas and reading the project dataset\n",
@@ -177,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +57,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UF</th>\n      <th>Sex</th>\n      <th>Age</th>\n      <th>Color</th>\n      <th>Years of study</th>\n      <th>Income</th>\n      <th>Height</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11</td>\n      <td>0</td>\n      <td>23</td>\n      <td>8</td>\n      <td>12</td>\n      <td>800</td>\n      <td>1.603808</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11</td>\n      <td>1</td>\n      <td>23</td>\n      <td>2</td>\n      <td>12</td>\n      <td>1150</td>\n      <td>1.739790</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>11</td>\n      <td>1</td>\n      <td>35</td>\n      <td>8</td>\n      <td>15</td>\n      <td>880</td>\n      <td>1.760444</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>0</td>\n      <td>46</td>\n      <td>2</td>\n      <td>6</td>\n      <td>3500</td>\n      <td>1.783158</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>47</td>\n      <td>8</td>\n      <td>9</td>\n      <td>150</td>\n      <td>1.690631</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>76835</th>\n      <td>53</td>\n      <td>1</td>\n      <td>46</td>\n      <td>2</td>\n      <td>11</td>\n      <td>812</td>\n      <td>1.687030</td>\n    </tr>\n    <tr>\n      <th>76836</th>\n      <td>53</td>\n      <td>0</td>\n      <td>30</td>\n      <td>4</td>\n      <td>7</td>\n      <td>1500</td>\n      <td>1.792934</td>\n    </tr>\n    <tr>\n      <th>76837</th>\n      <td>53</td>\n      <td>0</td>\n      <td>32</td>\n      <td>8</td>\n      <td>12</td>\n      <td>1300</td>\n      <td>1.830587</td>\n    </tr>\n    <tr>\n      <th>76838</th>\n      <td>53</td>\n      <td>0</td>\n      <td>57</td>\n      <td>8</td>\n      <td>4</td>\n      <td>1500</td>\n      <td>1.726344</td>\n    </tr>\n    <tr>\n      <th>76839</th>\n      <td>53</td>\n      <td>0</td>\n      <td>38</td>\n      <td>8</td>\n      <td>4</td>\n      <td>900</td>\n      <td>1.658305</td>\n    </tr>\n  </tbody>\n</table>\n<p>76840 rows × 7 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "source": [
@@ -231,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +97,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 5
     }
    ],
    "source": [
@@ -261,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +153,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 7
     }
    ],
    "source": [
@@ -307,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +173,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 8
     }
    ],
    "source": [
@@ -327,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,19 +193,12 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 9
     }
    ],
    "source": [
     "sorted(data['Color'].unique())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "source": [
@@ -363,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
