linear regression - advanced modeling techniques

--- a/Linear Regression/1-preliminary-analyzes.ipynb
+++ b/Linear Regression/1-preliminary-analyzes.ipynb
@@ -23,7 +23,10 @@
  "cells": [
   {
    "source": [
-    "<h1 style='color: green; font-size: 36px; font-weight: bold;'>Data Science - Linear regression</h1>"
+    "<h1 style='color: green; font-size: 36px; font-weight: bold;'>Data Science - Linear regression</h1>\n",
+    "\n",
+    "\n",
+    "### Study of the dependence of a variable in relation to one or more variables"
    ],
    "cell_type": "markdown",
    "metadata": {}
