hypothesis tests + correlation and regression

--- a/Statistics/Hypothesis test/two-sample-tests.ipynb
+++ b/Statistics/Hypothesis test/two-sample-tests.ipynb
@@ -23,6 +23,42 @@
  "cells": [
   {
    "source": [
+    "## Importing libraries and dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   UF  Sex  Age  Color  Years of study  Income    Height\n",
+       "0  11    0   23      8              12     800  1.603808\n",
+       "1  11    1   23      2              12    1150  1.739790\n",
+       "2  11    1   35      8              15     880  1.760444\n",
+       "3  11    0   46      2               6    3500  1.783158\n",
+       "4  11    1   47      8               9     150  1.690631"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UF</th>\n      <th>Sex</th>\n      <th>Age</th>\n      <th>Color</th>\n      <th>Years of study</th>\n      <th>Income</th>\n      <th>Height</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11</td>\n      <td>0</td>\n      <td>23</td>\n      <td>8</td>\n      <td>12</td>\n      <td>800</td>\n      <td>1.603808</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11</td>\n      <td>1</td>\n      <td>23</td>\n      <td>2</td>\n      <td>12</td>\n      <td>1150</td>\n      <td>1.739790</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>11</td>\n      <td>1</td>\n      <td>35</td>\n      <td>8</td>\n      <td>15</td>\n      <td>880</td>\n      <td>1.760444</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>0</td>\n      <td>46</td>\n      <td>2</td>\n      <td>6</td>\n      <td>3500</td>\n      <td>1.783158</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>47</td>\n      <td>8</td>\n      <td>9</td>\n      <td>150</td>\n      <td>1.690631</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "data = pd.read_csv('data/data.csv', sep = ',')"
+   ]
+  },
+  {
+   "source": [
     "## <font color = green> Tests for Two Samples </font>\n",
     "***\n",
     "\n",
@@ -49,17 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "men = data.query('Sex == 0').sample(500, random_state=101)['Income']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "women = data.query('Sex != 0').sample(500, random_state=101)['Income']"
+   ]
   },
   {
    "source": [
@@ -70,38 +110,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2142.608"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "men_sample_average = men.mean() \n",
+    "men_sample_average"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1357.528"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "women_sample_average = women.mean() \n",
+    "women_sample_average"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2142.608"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "men_sample_std = men.std()  \n",
+    "men_sample_average"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1569.9011907484578"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "women_sample_std = women.std()  \n",
+    "women_sample_std"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "significance = 0.01\n",
+    "confidence = 1 - significance\n",
+    "n_men = 500\n",
+    "n_women = 500\n",
+    "d_0 = 0 #difference between averages"
+   ]
   },
   {
    "source": [
@@ -116,23 +218,24 @@
     "\n",
     "#### <font color = 'red'> Remember, the null hypothesis always contains the equality claim </font>\n",
     "\n",
-    "### $\\mu_1\\ Rightarrow $ Average incomes of male household heads\n",
-    "### $\\mu_2\\ Rightarrow $ Average income of female household heads\n",
+    "### $\\mu_1\\Rightarrow $ Average incomes of male household heads\n",
+    "### $\\mu_2\\Rightarrow $ Average income of female household heads\n",
     "\n",
-    "### $\n",
-    "\\begin {cases}\n",
-    "H_0:\\mu_1\\leq\\mu_2\\\\\n",
-    "H_1:\\mu_1>\\mu_2\n",
-    "\\end {cases}\n",
+    "\n",
+    "$\n",
+    "\\begin{cases}\n",
+    "H_0: \\mu_1 \\leq \\mu_2\\\\\n",
+    "H_1: \\mu_1 > \\mu_2\n",
+    "\\end{cases}\n",
     "$\n",
     "\n",
     "### or\n",
     "\n",
-    "### $\n",
-    "\\ begin {cases}\n",
-    "H_0:\\mu_1-\\mu_2\\leq 0\\\\\n",
-    "H_1:\\mu_1-\\mu_2> 0\n",
-    "\\end {cases}\n",
+    " $\n",
+    "\\begin{cases}\n",
+    "H_0: \\mu_1 -\\mu_2 \\leq 0\\\\\n",
+    "H_1: \\mu_1 -\\mu_2 > 0\n",
+    "\\end{cases}\n",
     "$"
    ],
    "cell_type": "markdown",
@@ -172,17 +275,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.99"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "probability = confidence\n",
+    "probability "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.33"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "z_alpha = norm.ppf(probability)\n",
+    "z_alpha.round(2)"
+   ]
   },
   {
    "source": [
@@ -209,10 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5.86562005776475"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "numerator = (men_sample_average - women_sample_average) - d_0\n",
+    "\n",
+    "denominator = np.sqrt((men_sample_std ** 2 /n_men) + (women_sample_std ** 2/n_women))\n",
+    "\n",
+    "z = numerator/denominator\n",
+    "z"
+   ]
   },
   {
    "source": [
@@ -243,6 +394,43 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "z >= z_alpha"
+   ]
+  },
+  {
+   "source": [
+    "### <font color = 'green'> Conclusion: With a 99% confidence level, we reject $ H_0 $, that is, we conclude that the average income of male household heads is higher than the average income of male household heads. female heads of households. Confirming the allegation of income inequality between the sexes. </font>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### <font color='red'>$p$ value criterion</font>\n",
+    "\n",
+    "> ### One tail test\n",
+    "> ### Reject $H_0$ if value $p\\leq\\alpha$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "source": [
     "https://www.statsmodels.org/dev/generated/statsmodels.stats.weightstats.DescrStatsW.html\n",
     "\n",
@@ -253,59 +441,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from statsmodels.stats.weightstats import DescrStatsW, CompareMeans"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_men = DescrStatsW(men)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_women = DescrStatsW(women)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_with_descrStatsW = test_men.get_compare(test_women)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.2372867859458255e-09"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "z, p_value = test_with_descrStatsW.ztest_ind(alternative='larger', value = 0)\n",
+    "p_value"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "p_value <= significance"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_with_compareMeans = CompareMeans(test_men, test_women)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.2372867859458255e-09"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "z, p_value = test_with_compareMeans.ztest_ind(alternative='larger', value = 0)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
+   "source": [
+    "p_value <= significance"
+   ]
   }
  ]
 }
